# src/main/java/com/sgi/credit_back/infrastructure/exception/CustomException.java
@@ -1,0 +1,23 @@
+package com.sgi.credit_back.infrastructure.exception;
+
+import com.sgi.credit_back.domain.shared.CustomError;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+
+import java.time.LocalDateTime;
+
+@Data
+@EqualsAndHashCode(callSuper = true)
+public class CustomException extends RuntimeException{
+    private Integer status;
+    private String message;
+    private String code;
+    private LocalDateTime timestamp;
+
+    public CustomException(CustomError error) {
+        this.status = error.getError().getStatus().value();
+        this.message = error.getError().getMessage();
+        this.code = error.getError().getCode();
+        this.timestamp = LocalDateTime.now();
+    }
+}
