# src/main/resources/openapi.yml
@@ -380,8 +380,18 @@ components:
           type: number
     ErrorResponse:
       type: object
+      required:
+        - status
+        - code
+        - message
+        - timestamp
       properties:
-        error:
+        status:
+          type: int
+        code:
           type: string
         message:
           type: string
+        timestamp:
+          type: string
+          format: date-time
